@@ -1,46 +1,11 @@
-# springservice
-A basic spring boot service to make a POC of how multi-stage Dockerfiles decrease the size of the image.
+# A basic spring boot service to make a POC of how multi-stage Dockerfiles decrease the size of the image.
 
---------------------------------------------
-FROM openjdk:11-jdk-slim as builder
-WORKDIR /app/source
-COPY . /app/source
-RUN ./mvnw clean package
-EXPOSE 8080
+FROM openjdk:11-jdk-slim as builder \
+WORKDIR /app/source \
+COPY . /app/source \ 
+RUN ./mvnw clean package \
+EXPOSE 8080 \
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
---------------------------------------------
 
-With this ☝️ Dockerfile, the size of the image is ~447MB
-With this 👇 one, the size of the image is ~76MB
-
-------------------------------------------------------------------------------------------------------------------------------------
-FROM alpine:latest as packager
-
-RUN apk --no-cache add openjdk11-jdk openjdk11-jmods
-
-ENV JAVA_MINIMAL="/opt/java-minimal"
-
-RUN /usr/lib/jvm/java-11-openjdk/bin/jlink \
-    --verbose \
-    --add-modules \
-        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
-    --compress 2 --strip-debug --no-header-files --no-man-pages \
-    --release-info="add:IMPLEMENTOR=Gnoppix:IMPLEMENTOR_VERSION=Gnoppix_JRE" \
-    --output "$JAVA_MINIMAL"
-
-RUN mkdir -p /app/source
-WORKDIR /app/source
-COPY . /app/source
-RUN ./mvnw clean package
-
-FROM alpine:latest
-
-ENV JAVA_HOME=/opt/java-minimal
-ENV PATH="$PATH:$JAVA_HOME/bin"
-
-COPY --from=packager "$JAVA_HOME" "$JAVA_HOME"
-COPY --from=packager "/app/source/target/*.jar" "/app/app.jar"
-
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
-------------------------------------------------------------------------------------------------------------------------------------
+With this ☝️ Dockerfile, the size of the image is ~447MB \
+With the Dockerfile of this repo, the size of the image is ~76MB
